gc example